pgcrypto symmetric encryption first commit

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,10 @@
-FIELD_ENCRYPTION_KEY='a long and secure salt value'
+DB_ENGINE=postgresql
+DB_HOST=
+DB_NAME=
+DB_USERNAME=
+DB_PASS=
+DB_PORT=
+
+PGCRYPTO_KEY='a long and secure salt value'
 SECRET_KEY='a long and secure salt value'
 HASHID_FIELD_SALT='a long and secure salt value'
