--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 asgiref==3.7.2
+autopep8==2.0.2
 backports.zoneinfo==0.2.1
 certifi==2023.5.7
 cffi==1.15.1
@@ -6,8 +7,8 @@ charset-normalizer==3.1.0
 cryptography==41.0.1
 defusedxml==0.7.1
 Django==4.2.2
-django-encrypted-model-fields==0.6.5
 django-hashid-field==3.3.7
+django-pgcrypto-fields==2.6.0
 django-templated-mail==1.1.1
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
@@ -18,6 +19,8 @@ idna==3.4
 inflection==0.5.1
 oauthlib==3.2.2
 packaging==23.1
+psycopg2==2.9.6
+pycodestyle==2.10.0
 pycparser==2.21
 PyJWT==2.7.0
 python-dotenv==1.0.0
@@ -29,6 +32,7 @@ requests-oauthlib==1.3.1
 social-auth-app-django==5.2.0
 social-auth-core==4.4.2
 sqlparse==0.4.4
+tomli==2.0.1
 typing-extensions==4.6.3
 uritemplate==4.1.1
 urllib3==2.0.3
